--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
 title: 飛上九天攬日
 email: devgis@163.com
-description: > # this means to ignore newlines until "baseurl:"
-  天行健 君子以自强不息 地势坤 君子以厚德载物
+description: 天行健 君子以自强不息 地势坤 君子以厚德载物
 baseurl: / # the subpath of your site, e.g. /blog/
 url:  # the base hostname & protocol for your site
-twitter_username: twitter_username
-github_username:  github_username
+twitter_username: fly9sky
+github_username:  fly9sky
 
 # Build settings
 markdown: kramdown
