--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ paginate_path: "/page:num"
 collections:
   pictures:
     output: true
-    permalink: /pictures/:path:output_ext
+    permalink: /pictures/:path
   poetrys:
     output: true
-    permalink: /poetrys/:path:output_ext
+    permalink: /poetrys/:path
   notes:
     output: true
-    permalink: /notes/:path:output_ext
+    permalink: /notes/:path
   writes:
     output: true
-    permalink: /writes/:path:output_ext
+    permalink: /writes/:path
 
