重新整理诗集部分并改名
重新整理诗集部分并改名

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ collections:
   pictures:
     output: true
     permalink: /pictures/:path
-  poetry:
+  poetrys:
     output: true
-    permalink: /poetry/:path
+    permalink: /poetrys/:path
   notes:
     output: true
     permalink: /notes/:path
