--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: 飛上九天攬日
+title: 首页
 email: devgis@163.com
 description: 天行健 君子以自强不息 地势坤 君子以厚德载物
 baseurl: / # the subpath of your site, e.g. /blog/
@@ -19,8 +19,8 @@ paginate_path: "/page:num"
 collections:
   anthologies:
     output: true
-    permalink: /anthologies/:path
+    permalink: /anthologie/:path
   notes:
     output: true
-    permalink: /notes/:path
+    permalink: /note/:path
 
